--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           username: deploy
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
-            cd /var/www/sergiopalomo
+            cd /var/www/alexika-new
             git pull origin main || git clone https://github.com/${{ github.repository }} .
             cat > .env.production << EOF
             NODE_ENV=production
@@ -29,7 +29,7 @@ jobs:
             AUTH_TRUST_HOST=${{ secrets.AUTH_TRUST_HOST }}
             NEXT_PUBLIC_BETTER_AUTH_URL=${{ secrets.NEXT_PUBLIC_BETTER_AUTH_URL }}
             EOF
-            docker-compose down
-            docker-compose build --no-cache
-            docker-compose up -d
+            docker compose down
+            docker compose build --no-cache
+            docker compose up -d
             docker image prune -f
