--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
 services:
-  nextjs-app:
+  app:
     build: .
     ports:
       - "3000:3000"
+    env_file:
+      - .env.production
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=${DATABASE_URL}
     restart: unless-stopped
