--- a/.env.production.local
+++ b/.env.production.local
@@ -15,3 +15,6 @@ BETTER_AUTH_SECRET=chljBPcQ0X1aK4Woz2WkNXlLEa7qrRYVTtfkpZ972f4=
 
 # Для продакшена
 BETTER_AUTH_TRUST_HOST=true
+
+RESEND_API_KEY="re_EoifZqBA_Me7nJZkxW8p52cwZKpaUJABD"
+SENDER_EMAIL="onboarding@resend.dev"
