--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.5.1",
     "@tanstack/react-query": "^5.83.0",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.2.12",
@@ -43,8 +45,10 @@
     "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-email": "^4.2.8",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.0.1",
     "slugify": "^1.6.6",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
@@ -55,6 +59,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@react-email/preview-server": "^4.2.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
